articles about story

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -44,6 +44,10 @@
 		font-size: 0.8em
 
 +media-breakpoint-down(md)
+	.article_images
+		text-align: center
+		img
+			width: 100%
 	.trainer_name_wrapper
 		font-size: 1.5em
 	.trainer_card_body
