--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -559,8 +559,11 @@ body
 	margin-top: 40px
 .article_images
 	text-align: center
+	margin: 30px 0
 	img
 		width: 30%
+		display: inline-block
+		vertical-align: top
 .article_date
 	width: 40%
 	font-weight: bold
