--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -26,6 +26,17 @@
 		height: 180px
 	.last_news_header
 		font-size: 1em
+@media screen and (max-width: 1366px)
+	.video_gallery_container
+		top: 35px
+	.video_item.single
+		width: 400px
+	.video_item.double .video_post
+		width: 400px
+		margin-bottom: 35px
+	.video_item.double .video_post_img
+		width: 180px
+		height: 180px
 +media-breakpoint-down(xl)
 	
 +media-breakpoint-down(lg)
