--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -105,7 +105,7 @@ body
 		text-align: center
 		margin-bottom: 160px
 .sponsor_link,.lang_block
-	padding: 25px 
+	padding: 25px
 	display: block
 	border-left: 1px solid #868A96
 .lang_block
@@ -243,7 +243,7 @@ body
 	align-items: flex-start
 	.tag
 		margin-bottom: 20px
-.play_btn 
+.play_btn
 	width: 100px
 	height: 100px
 	border-radius: 50%
@@ -286,7 +286,7 @@ body
 		font-weight: 500
 	.more span:after
 		background-color: #fff
-.card_body 
+.card_body
 	.match_item
 		padding: 60px 0
 		background-color: #f1f1f1
@@ -648,7 +648,7 @@ body
 	.video_item_header
 		font-size: 1.3em
 .video_section
-	position: relative		
+	position: relative
 .video_gallery_container
 	position: absolute
 	width: 60%
@@ -665,7 +665,7 @@ body
 	flex-direction: column
 	justify-content: space-between
 	align-items: center
-.matches 
+.matches
 	.last_news
 		position: absolute
 		top: -110px
@@ -768,4 +768,13 @@ body
 	.hamburger.is-active .hamburger-inner, .hamburger.is-active .hamburger-inner:after, .hamburger.is-active .hamburger-inner:before
 		background-color: #fff
 		width: 40px
+.social_block
+	position: fixed
+	width: 40px
+	top: 15%
+	left: 0
+	z-index: 2
+	.social_link_fixed
+		display: block
+		margin-bottom: 5px
 @import "media" // Always at the end
