change soc icons

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -38,7 +38,7 @@
 		width: 180px
 		height: 180px
 +media-breakpoint-down(xl)
-	
+
 +media-breakpoint-down(lg)
 	.logo_text
 		display: none
@@ -55,6 +55,8 @@
 		font-size: 0.8em
 
 +media-breakpoint-down(md)
+	.social_block
+		top: 20%
 	.article_images
 		text-align: center
 		img
@@ -169,7 +171,7 @@
 			text-align: center
 			border-bottom: 1px solid #fff
 			margin-top: 35px
-			
+
 		.sponsors_line
 			display: none
 	.logo_img
