--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -771,7 +771,8 @@ body
 .social_block
 	position: fixed
 	width: 40px
-	top: 15%
+	top: 50%
+	transform: translateY(-50%)
 	left: 0
 	z-index: 2
 	.social_link_fixed
