add Contact page

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -53,8 +53,14 @@
 		width: 100%
 	.last_news_tag
 		font-size: 0.8em
+	.is_contacts .contact_item_text
+		font-size: 1.2em
+		width: 80%
 
 +media-breakpoint-down(md)
+	.is_contacts .contact_item_text
+		font-size: 1em
+		width: 75%
 	.social_block
 		top: 20%
 	.article_images
@@ -116,6 +122,11 @@
 		padding: 30px 20px
 
 +media-breakpoint-down(sm)
+	.is_contacts .contact_page_header
+		text-align: center
+		margin-bottom: 50px
+	.is_contacts .contact_overlay
+		width: 95%
 	.matches .last_news .last_news_descr .magnifier_ico
 		width: 10px
 	.last_news_header
