--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -777,5 +777,29 @@ body
 	z-index: 2
 	.social_link_fixed
 		display: block
-		margin-bottom: 5px
+.is_contacts
+	.contact_page_header
+		font-size: 3em
+	.contact_item
+		margin-bottom: 25px
+		padding-left: 25px
+	.contact_item_ico
+		margin-right: 30px
+		display: inline-block
+		vertical-align: middle
+		width: 9%
+	.contact_item_text
+		font-size: 1.7em
+		font-weight: bold
+		display: inline-block
+		vertical-align: middle
+		width: 84%
+	.contact_overlay
+		background-color: rgba(#000, .2)
+		position: absolute
+		top: 0
+		right: 0
+		bottom: 0
+		width: 50%
+		border-left: 3px solid $red
 @import "media" // Always at the end
